2006-09-05  Zack Weinberg  <zackw@panix.com>

	* revision.hh (enum made_for): New.
	(revision_t): Add 'made_for' field; in default constructor,
	initialize it to made_for_nobody.
	(make_revision_for_workspace): Two new functions.
	* revision.cc: Throughout, set made_for when appropriate.
	Implement new functions.
	* work.cc (get_work_rev): Set made_for.
	(put_work_rev): Invariant failure if made_for is not
	made_for_workspace.
	(perform_additions, perform_deletions, perform_rename)
	(perform_pivot_root): Use make_revision_for_workspace.
	* database.cc (put_revision): Invariant failure if made_for is not
	made_for_database.
	* merge.cc (store_roster_merge_result)
	* rcs_import.cc (consume_cluster): Set made_for on revision
	constructed.
	* cmd_merging.cc, cmd_ws_commit.cc: Use make_revision_for_workspace
	where appropriate.
	* work_migration.cc: Add a note to the commentary about not being
	able to use the database here.
	(migrate_1_to_2): Remove database argument.
	Use make_revision_for_workspace instead of messing about with
	rosters.

	* tests/workspace_migration/__driver__.lua: Strengthen test of
	options preservation; invoke migrate_workspace using raw_mtn.
	* tests/workspace_migration/{test-1,test-2}: Update to match.

2006-09-05  Alex Queiroz  <alex@ventonegro.org>

	* po/pt_BR.po: Fuzzies fixed and strings translated.

2006-09-05  Alex Queiroz  <alex@ventonegro.org>

	* luaext_*.cc: Minor cleanups.

2006-09-05  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 4 more fuzzies, 6 more new strings.

2006-09-05  Richard Levitte  <richard@levitte.org>

	* po/sv.po: 5 fuzzies and 3 new strings to fix.  New translation
	for "option" when it's about the options file.

2006-09-04  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (get_attr): Remove file_path overload, for consistency
	wiht the rest of roster_t.
	* diff_patch.cc (attribute_manual_merge, get_file_encoding):
	Adjust accordingly.

2006-09-03  Zack Weinberg  <zackw@panix.com>
