@@ -677,3 +677,4 @@ table.insert(tests, "annotate_with_human_output")
 table.insert(tests, "automate_genkey")
 table.insert(tests, "migrate_workspace")
 table.insert(tests, "workspace_migration")
+table.insert(tests, "usage_output_streams")
